--- a/BumpDog.plist
+++ b/BumpDog.plist
@@ -20,15 +20,15 @@
 				<key>Element</key>
 				<string>//*[@id=&quot;TPL_username_1&quot;]</string>
 				<key>Value</key>
-				<string>nwyfss@gmail.com</string>
+				<string>nwyf****@gmail.com</string>
 			</dict>
 			<dict>
-				<key>Type</key>
-				<integer>1</integer>
-				<key>Element</key>
-				<string>//*[@id=&quot;TPL_password_1&quot;]</string>
-				<key>Value</key>
-				<string>NWYFSSnwyfss123</string>
+					<key>Type</key>
+					<integer>1</integer>
+					<key>Element</key>
+					<string>//*[@id=&quot;TPL_password_1&quot;]</string>
+					<key>Value</key>
+					<string>******</string>
 			</dict>
 			<dict>
 				<key>Type</key>
