--- a/BumpDog的副本.plist
+++ b/BumpDog的副本.plist
@@ -20,7 +20,7 @@
 				<key>Element</key>
 				<string>//*[@id=&quot;TPL_username_1&quot;]</string>
 				<key>Value</key>
-				<string>nwyfss@gmail.com</string>
+				<string>nwyf****@gmail.com</string>
 			</dict>
 			<dict>
 				<key>Type</key>
@@ -28,7 +28,7 @@
 				<key>Element</key>
 				<string>//*[@id=&quot;TPL_password_1&quot;]</string>
 				<key>Value</key>
-				<string>NWYFSSnwyfss123</string>
+				<string>******</string>
 			</dict>
 			<dict>
 				<key>Type</key>
